--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/a0f1c55686.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
   </head>
   <body>
     <div class="container">
@@ -218,11 +220,11 @@
           <div class="footer">
             <p>Phòng kỹ thuật công nghệ</p>
             <div class="social-links">
-              <a href="https://www.youtube.com/yourchannel" target="_blank" class="social-icon">
+              <a href="https://www.tiktok.com/@huongdan_kythuatfpt" target="_blank" class="social-icon">
                 
                 <i class="fa-brands fa-tiktok"></i>
               </a>
-              <a href="https://www.tiktok.com/@yourprofile" target="_blank" class="social-icon">
+              <a href="#" target="_blank" class="social-icon">
                 <i class="fa fa-youtube-play"></i>
               </a>
           </div>
