--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <div class="footer">
             <p>Phòng kỹ thuật công nghệ</p>
             <div class="social-links">
-              <a href="https://www.tiktok.com/@huongdan_kythuatfpt" target="_blank" class="social-icon">
+              <a href="https://www.tiktok.com/@anhtrailapwifi" target="_blank" class="social-icon">
                 
                 <i class="fa-brands fa-tiktok"></i>
               </a>
