update new code

--- a/index.html
+++ b/index.html
@@ -560,6 +560,8 @@
                 <h4 id="1212">Bước 2: Vào phần Quản lý Internet</h4>
                 <img src="./Hình ảnh/Hình ảnh/Không sử dụng được WIFI/Hướng xử lý 2/2.jpg"class="zoomable" onclick="toggleZoom(this)">
             </div>
+          </div>
+          <div class="content21">
             <div class="image-row">
                 <h4 id="1213">Bước 3: Vào phần Chặn thiết bị</h4>
                 <img src="./Hình ảnh/Hình ảnh/Không sử dụng được WIFI/Hướng xử lý 2/3.jpg"class="zoomable" onclick="toggleZoom(this)">
@@ -568,7 +570,8 @@
                 <h4 id="1214">Bước 4: Cho phép thiết bị kết nối Internet</h4>
                 <img src="./Hình ảnh/Hình ảnh/Không sử dụng được WIFI/Hướng xử lý 2/4.jpg"class="zoomable" onclick="toggleZoom(this)">
             </div>
-        </div>
+          </div>  
+        
         
 
       </div>
