--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           
           <h4 id="1125">Bước 5: Kiểm tra thông số RSSI</h4>
           <img 
-          src="./Hình ảnh/Hình ảnh/Sử dụng MỸ BẢO/Thông số RSSI ( Cường độ sóng wifi 2 băng tần 2.4G & 5G ).png" >
+          src="./Hình ảnh/Hình ảnh/Sử dụng MỸ BẢO/Thông số RSSI ( Cường độ sóng wifi 2 băng tần 2.4G & 5G ).png" class="zoomable" onclick="toggleZoom(this)" >
           
         </div>
       </div>
